--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <version.java>1.8</version.java>
         <version.junit-jupiter-engine>5.3.1</version.junit-jupiter-engine>
         <version.junit-platform-launcher>1.1.0</version.junit-platform-launcher>
-        <version.maven-surefire-plugin>2.22.0</version.maven-surefire-plugin>
+        <version.maven-surefire-plugin>2.22.1</version.maven-surefire-plugin>
         <version.logback-classic>1.2.3</version.logback-classic>
     </properties>
 
@@ -70,6 +70,11 @@
                     <target>${maven.compiler.target}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${version.maven-surefire-plugin}</version>
             </plugin>
         </plugins>
     </build>
